# mahe-sem5-oslab

./: CMakeLists.txt  README.md  comprehensive_test.sh  test_chat.sh
cmake/: DefaultConfig.cmake
helper/: CMakeLists.txt  helper.c  helper.h  vec.c  vec.h
lab10/: CMakeLists.txt  q1.c  q2.c  q3.c  q4.c
lab11/: CMakeLists.txt  q1.c  q2.c  q3.c  q4.c
lab12/: CMakeLists.txt  q1.c  q2.c  q3.sh  q4.sh
lab2/: lab2-q1.sh  lab2-q2.sh  lab2-q3.sh  lab2-q4.sh  lab2-q5.sh  lab2-q6.sh
lab3/: lab3-q1.sh  lab3-q2.sh  lab3-q3.sh  lab3-q4.sh
lab4/: CMakeLists.txt  q1.c  q2.c  q3.c
lab5/: CMakeLists.txt  q1.c  q2.c  q3.c  q4.c
lab6/: CMakeLists.txt  helper.c  helper.h  q1_producer-consumer.c  q2_pipe-demo.c  q4_shelf-consumer.c  q4_shelf-producer.c
lab7/: CMakeLists.txt  q_client.c  q_server.c
lab8/: CMakeLists.txt  q1.c  q2.c  q3.c  q4.c
lab9/: CMakeLists.txt  q1.c  q2.c  q3.c  q4.c
