cmake_minimum_required(VERSION 3.25 FATAL_ERROR)

project(oslab-c-code)

include(cmake/DefaultConfig.cmake)
include(CTest)
include(CPM)

add_subdirectory(helper)
add_subdirectory(lab4)
add_subdirectory(lab5)
add_subdirectory(lab6)
add_subdirectory(lab7)
add_subdirectory(lab8)
add_subdirectory(lab9)
add_subdirectory(lab10)
add_subdirectory(lab11)
add_subdirectory(lab12)
